# YUGA-Planning-

./: .eslintrc  ALL_EDITORS_COMPLETE.md  ARCHITECTURE.md  BUILD_SUCCESS.txt  CMakeLists.txt  CONTRIBUTING.md  CPP_ENGINE_STATUS.md  EDITORS_COMPLETE.md  FINAL_STATUS.md  LAUNCH_YUGA.ps1  MAINTAINABILITY.md  MIGRATION_STRATEGY.md  NATIVE_ENGINE_PLAN.md  README.md  RUN_COMPLETE_DEMO.ps1  START_AI_NOW.txt  YUGA_COMPLETE_APP.html  YUGA_ENGINE_UI_DEMO.html  YUGA_GAMECRAFT_UI.html  YUGA_MODERN_UI.html  YUGA_STATUS.md  YUGA_VISION.md  package.json  railway.json  render.yaml  serve-ui.js  setup-free-ai-tools.ps1  setup-google-api.ps1  vercel.json  vite.config.ts  vite.config.ts.bak  vite.config.ts.new  yuga.code-workspace
.circleci/: config.yml
engine-core/: BUILD_ALL_SYSTEMS.ps1  BUILD_MINIMAL.ps1  BUILD_NOW.ps1  BUILD_WORKFLOW.ps1  CMakeLists.txt  CMakeLists_AllSystems.txt  CMakeLists_Complete.txt  CMakeLists_backup.txt  CMakeLists_simple.txt  README.md  RUN_ME.ps1  build-and-run.ps1  build-engine.bat  build_log.txt  install-libs.ps1  run-engine.bat  setup-dev-env.ps1  setup-graphics.ps1
engine-core/Assets/Shaders/: pbr.frag  pbr.vert
engine-core/build_minimal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  YUGAEngineMinimal.sln  YUGAEngineMinimal.vcxproj  YUGAEngineMinimal.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
engine-core/build_simple/: CMakeCache.txt
engine-core/examples/: AssetPipelineExample.cpp  CompleteFeatureShowcase.cpp  CompleteGameDemo.cpp  SimpleGameDemo.cpp  WorkflowDemo.cpp
engine-core/examples/UI/: AllSystemsDemo.cpp
engine-core/examples/yuga-ai-gamecraft-main/: README.md  electron-main.cjs  index.html  package.json
engine-core/include/Animation/: AnimationController.h
engine-core/include/Assets/: AssetManager.h  Material.h  Mesh.h  Model.h  Texture.h
engine-core/include/Audio/: AudioEngine.h
engine-core/include/Core/: Core.h  Engine.h  Log.h
engine-core/include/ECS/: ComponentRegistry.h  Components.h  Entity.h
engine-core/include/Editor/: EditorLayer.h
engine-core/include/Input/: Input.h  InputManager.h
engine-core/include/Math/: MathUtils.h  Matrix4.h  Quaternion.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
engine-core/include/Network/: NetworkManager.h
engine-core/include/Physics/: PhysicsWorld.h  RigidBody.h
engine-core/include/Rendering/: Camera.h  Light.h  ParticleSystem.h  Renderer.h  Shader.h  Window.h
engine-core/include/Scene/: Scene.h  SceneManager.h
engine-core/include/Scripting/: ScriptEngine.h
engine-core/include/Terrain/: Terrain.h
engine-core/include/UI/: UICanvas.h  UIComponents.h
engine-core/include/Workflow/: WorkflowManager.h
engine-core/src/: main.cpp  main_demo.cpp  main_minimal.cpp  main_simple.cpp
engine-core/src/Animation/: AnimationController.cpp
engine-core/src/Assets/: AssetManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  Texture.cpp
engine-core/src/Audio/: AudioEngine.cpp
engine-core/src/Core/: Engine.cpp
engine-core/src/Editor/: EditorLayer.cpp
engine-core/src/Input/: Input.cpp  InputManager.cpp
engine-core/src/Math/: Matrix4.cpp  Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector4.cpp
engine-core/src/Network/: NetworkManager.cpp
engine-core/src/Physics/: PhysicsWorld.cpp  RigidBody.cpp
engine-core/src/Rendering/: Camera.cpp  ParticleSystem.cpp  Renderer.cpp  Shader.cpp  Window.cpp
engine-core/src/Scene/: Scene.cpp  SceneManager.cpp
engine-core/src/Scripting/: ScriptEngine.cpp
engine-core/src/Terrain/: Terrain.cpp
engine-core/src/UI/: UICanvas.cpp  UIComponents.cpp
engine-core/src/Workflow/: WorkflowManager.cpp
src-native/: Cargo.toml
src-native/src/: lib.rs  main.cpp  main.rs
src-native/src/ai/: local_models.rs  mod.rs  model_router.rs  vector_db.rs
src-native/src/animation/: blend.rs  core.rs  debug.rs  examples.rs  mod.rs  state_machine.rs  test_scene.rs
src-native/src/assets/: mod.rs
src-native/src/audio/: mod.rs
src-native/src/core/: Application.cpp  Engine.cpp  Window.cpp  ecs.rs  engine.rs  mod.rs  scripting.rs  subsystem.rs
src-native/src/debug/: profiling.rs
src-native/src/ecs/: EntityComponentSystem.cpp
src-native/src/editor/: mod.rs
src-native/src/game/: particles.rs
(+261 files in other folders)
