[package]
name = "yuga-native"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics
gl = "0.14"
glutin = "0.29"
glfw = { version = "0.45", features = ["vulkan"] }
image = "0.24"
nalgebra = "0.32"

# Physics
rapier3d = { version = "0.17", features = ["simd-stable"] }

# Audio
rodio = "0.17"

# ECS
hecs = "0.10"

# Scripting
mlua = { version = "0.8", features = ["lua54", "vendored"] }

# UI
imgui = "0.11"
imgui-glfw-rs = "0.11"
imgui-opengl-renderer = "0.12"

# Asset Loading
assimp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
rayon = "1.7"
parking_lot = "0.12"
tracy-client = "0.15"
pollster = "0.3"
# Core engine
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_egui = "0.23"
rhai = { version = "1.16", features = ["sync"] }

# AI and networking
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance and utilities
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"
thread_local = "1.1"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
release = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "yuga-editor"
path = "src/main.rs"

[lib]
name = "yuga_engine"
path = "src/lib.rs"